@@ -44,11 +44,13 @@ AVC = [' h 264 ', ' h264 ', ' x264 ', ' avc ']
 
 def supported_video_extensions():
     supported_video_extensions = xbmc.getSupportedMedia('video').split('|')
-    return [i for i in supported_video_extensions if i != '' and i != '.zip']
+    unsupported = ['', '.url', '.bin', '.zip', '.rar', '.001', '.disc', '.7z', '.tar.gz', '.tar.bz2',
+                   '.tar.xz', '.tgz', '.tbz2', '.gz', '.bz2', '.xz', '.tar']
+    return [i for i in supported_video_extensions if i not in unsupported]
 
 
 def get_qual(term):
-    term = term.lower()
+    term = ' {} '.format(term).lower()
     if any(i in term for i in SCR):
         return 'scr'
     elif any(i in term for i in CAM):
@@ -106,7 +108,7 @@ def getFileType(url):
         url = cleantitle.get_title(url)
     except:
         url = six.ensure_str(url, errors='ignore')
-    url = url.lower()
+    url = ' {} '.format(url).lower()
     type = ''
 
     if any(i in url for i in [' bluray ', ' blu ray ']):
