@@ -1,3 +1,6 @@
+[B][COLOR gold]v4.03.08[/COLOR][/B]
+- Added support for Easynews
+
 [B][COLOR gold]v4.03.07[/COLOR][/B]
 - Fixed non-en language title/aliases parsing for scraping
 - Fixed sources sorting issue
